# pyefd

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  azure-pipelines.yml  index.html  params.json  pyefd.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tests.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_and_test.yml  pypi-publish.yml
docs/: Makefile  conf.py  index.rst  make.bat
examples/: example1.py  scikit_image.py
